<resources>
    <string name="app_name">DispositivosMoviles</string>
    <string name="hello_world_eng">Hello world!</string>
    <string name="hello_world_esp">Hola mundo!</string>
    <string name="app_name_menu">Example App</string>
    <string name="app_welcome_menu">¡Hola! Es bueno verte nuevamente</string>
    <string name="login_alt_menu">O conéctese usando las redes sociales</string>
    <string name="menu_name_API">API</string>
    <string name="menu_name_Files">Files</string>
    <string name="menu_name_settings">Settings</string>
    <string name="menu_name_menu4">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btn1">ChatGPT</string>
    <string name="btn2">Marvel</string>
    <string name="btn3">Cámara</string>
    <string name="btn4">Salir</string>
    <string name="btn5">Biométrico</string>
    <string name="btn6">Notificación</string>
    <string name="btn7"></string>
</resources>